Fixed Layout issues related to svg

--- a/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.scss
+++ b/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.scss
@@ -8,9 +8,10 @@
   right: 0;
 }
 
-#chart > div > svg > g > text {
-  font-size: 8pt;
-  fill: #272727;
+#chart > div > svg {
+  display: inherit;
+  top: 0;
+  left: 0;
 }
 
 #chart > div > svg > g {
@@ -45,9 +46,10 @@
 }
 
 .mat-toolbar.mat-toolbar-single-row{
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   height: fit-content;
+  background-color: #ffffff00
 }
 
 .vertical-divider {
@@ -61,13 +63,16 @@
 
 .chart-container {
   width: 100%;
-  padding: 10px;
+  height: 100vh;
   overflow-y: auto;
   position: relative;
-  display: flex;
-  display: -webkit-inline-flex;
+  display: inline-flex;
   display: -ms-inline-flexbox;
   flex-direction: row;
+  top: 0;
+  right: inherit;
+  left: inherit;
+  padding: 0 10px 0 10px;
 }
 
 .movable-box {
@@ -100,23 +105,24 @@
   left: 0;
   top: 0;
   padding: 10px;
+  overflow: auto;
 }
 
 .movable-box--handler {
   position: absolute;
   top: 0;
-  background-color: #d6d6d6;
+  background-color: #dcdcdc;
   cursor: move;
   width: 100%;
   height: 10px;
 }
 
 #chartBox {
-  width: 60%;
+  width: 50%;
   height: fit-content;
+  max-height: 80vh;
   position: relative;
-  overflow: auto;
-  z-index: 5;
+  z-index: 10;
 }
 
 #legendBox {
@@ -134,5 +140,5 @@
   height: fit-content;
   min-height: 200px;
   position: relative;
-  z-index: 10;
+  z-index: 20;
 }
